created gitignore and added first dependency

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/Chrixs/learning_node/issues"
   },
-  "homepage": "https://github.com/Chrixs/learning_node#readme"
+  "homepage": "https://github.com/Chrixs/learning_node#readme",
+  "dependencies": {
+    "lodash": "^4.17.4"
+  }
 }
